<resources>
    <string name="app_name">CreditRent</string>

    <!--————————main————————-->
    <string name="no_network">网络不给力</string>
    <string name="fail_connet">连接服务器失败，请稍后再试！</string>
    <string name="user">我的</string>
    <string name="chat">对话</string>
    <string name="homepage">首页</string>

    <!--————————登录注册————————-->
    <string name="action_settings">Settings</string>
    <string name="login_username">请输入用户名</string>
    <string name="login_nickname">请输入学号</string>
    <string name="login_phonenumber">请输入手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_email_hint">请再次输入密码</string>
    <string name="getPhoneCode">获取验证码</string>
    <string name="login">登录</string>
    <string name="unlogin">退出登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>
    <string name="agree">我已同意信租</string>
    <string name="agreement">用户协议</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="theNextStep">下一步</string>
    <string name="phoneCode">请输入验证码</string>
    <string name="completeYouInformation">完善你的信息</string>
    <string name="register_free">免费注册</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="resetPassword">重置密码</string>
    <string name="published">我发布的</string>
    <string name="selled">我卖出的</string>
    <string name="bought">我买到的</string>
    <string name="collected">我收藏的</string>


    <!--————————网络————————-->

    <!--————————user————————-->

    <string-array name="schools">

        <item>重庆邮电大学</item>
        <item>重庆大学</item>
        <item>西南大学</item>
        <item>重庆师范大学</item>
        <item>西南政法大学</item>
        <item>重庆工商大学</item>
        <item>重庆理工大学</item>
        <item>其他</item>
    </string-array>


    <string-array name="sex">
        <item>男</item>
        <item>女</item>
    </string-array>



</resources>
