<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/login_bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_theme"
            android:theme="@style/ThemeOverlay.AppCompat.Light">
            <ImageButton
                android:id="@+id/registerreal_btn_back"
                android:layout_width="32dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_keyboard_backspace_white_24dp"/>
            <TextView
                android:id="@+id/toolbar_title"
                android:textColor="@color/defaultWhite"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/completeYouInformation"/>
        </android.support.v7.widget.Toolbar>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/input_bg"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/registerreal_et_username"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@color/transparent"
            android:drawableLeft="@mipmap/login_icon_account"
            android:drawablePadding="25dp"
            android:hint="@string/login_username_hint"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:shadowDx="0.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:textColorHint="#ffdddddd"
            android:maxLength="10"
            android:maxLines="1"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@mipmap/base_horization_line" />


        <EditText
            android:id="@+id/registerreal_et_password"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@color/transparent"
            android:drawableLeft="@mipmap/login_icon_password"
            android:drawablePadding="25dip"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="15dip"
            android:textColorHint="#ffdddddd"
            android:maxLines="1"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@mipmap/base_horization_line" />
        <EditText
            android:id="@+id/registerreal_et_password_again"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@color/transparent"
            android:drawableLeft="@mipmap/login_icon_password"
            android:drawablePadding="25dip"
            android:hint="@string/login_email_hint"
            android:inputType="textPassword"
            android:paddingLeft="15dip"
            android:textColorHint="#ffdddddd"
            android:maxLines="1"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="18.7dp"
        android:gravity="center_vertical">

        <CheckBox
            android:id="@+id/check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_signup_checkbox"
            android:checked="true"
            android:text="@string/agree"
            android:textColor="#777"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/agreement"
            android:textColor="#F06060"
            android:textSize="13sp" />
    </LinearLayout>

    <Button
        android:id="@+id/registerreal_btn_register"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/btn_login_selector"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/base_color_text_white"
        android:textSize="18sp" />

</LinearLayout>