<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_theme"
            android:theme="@style/ThemeOverlay.AppCompat.Light">
            <ImageButton
                android:id="@+id/forgetpsw_ib_back"
                android:layout_width="32dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_keyboard_backspace_white_24dp"/>
            <TextView
                android:id="@+id/toolbar_title"
                android:textColor="@color/defaultWhite"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/forgetPassword"/>
        </android.support.v7.widget.Toolbar>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/input_bg"
        android:layout_margin="5dp">

        <LinearLayout
            android:id="@+id/Linear_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/forgetpsw_et_phonenumber"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:background="@color/transparent"
                android:drawableLeft="@mipmap/login_icon_account"
                android:drawablePadding="25dip"
                android:hint="@string/login_phonenumber"
                android:inputType="number"
                android:paddingLeft="15dip"
                android:textColorHint="#ffdddddd"
                android:maxLength="11"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/forgetpsw_tv_getPhoneCode"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/getPhoneCode"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/base_horization_line"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Linear_phoneCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/forgetpsw_et_phoneCode"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:background="@color/transparent"
                android:drawableLeft="@mipmap/login_icon_password"
                android:drawablePadding="25dp"
                android:hint="@string/phoneCode"
                android:paddingLeft="15dp"
                android:textColorHint="#ffdddddd"
                android:maxLength="6"
                android:maxLines="1"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/base_horization_line"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Linear_newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/forgetpsw_et_newPassword"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:background="@color/transparent"
                android:drawableLeft="@mipmap/login_icon_password"
                android:drawablePadding="25dp"
                android:hint="@string/new_password_hint"
                android:paddingLeft="15dp"
                android:textColorHint="#ffdddddd"
                android:maxLength="6"
                android:maxLines="1"
                android:singleLine="true" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_nextStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/forgetpsw_btn_resetPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_login_selector"
            android:gravity="center"
            android:text="@string/resetPassword"
            android:textColor="@color/base_color_text_white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>